[gd_scene load_steps=10 format=3 uid="uid://cfta80h76u0k2"]

[ext_resource type="Script" path="res://Scripts/items and weapons/item_chest.gd" id="1_5q0v8"]
[ext_resource type="Texture2D" uid="uid://2q68gru5grmg" path="res://Assets/Sprites/items/Chest.png" id="2_4todt"]
[ext_resource type="AudioStream" uid="uid://05kx7ujogh1d" path="res://Assets/Audio/sound effects/wooden-trunk-latch-1-183944.mp3" id="3_3eu4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mul74"]
atlas = ExtResource("2_4todt")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g023v"]
atlas = ExtResource("2_4todt")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s73dg"]
atlas = ExtResource("2_4todt")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa5eg"]
atlas = ExtResource("2_4todt")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tm31y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mul74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g023v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s73dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa5eg")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7tw3e"]

[node name="item_chest" type="Area2D"]
collision_mask = 6
script = ExtResource("1_5q0v8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_tm31y")
frame_progress = 0.840089

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_7tw3e")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="open_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -5)
stream = ExtResource("3_3eu4e")
bus = &"Sound Effect"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
